--- a/src/component/Main/Main.css
+++ b/src/component/Main/Main.css
@@ -18,10 +18,7 @@
   width: 100%;
   height: 50vh;
 }
-h1{
-    font-size: 40px;
-    font-weight: 700;
-}
+
 video{
   width: 100%;
   height: 100%;
@@ -41,9 +38,37 @@ video{
 }
 .overlay{
   position: absolute;
-  top: 30px;
+  top: 0px;
   left: 0;
   width: 100%;
   height: 50%;
   background-color: rgba(0, 0, 0, .7);
+}
+.wrapper{
+ position: absolute;
+ width: 600px;
+ top: 0;
+ left: 50%;
+ transform: translate(-50%, 0);
+ z-index: 1000;
+}
+/* .main-slide{
+  display:flex;
+  flex-direction: column;
+  justify-content: flex-end;
+} */
+.carousel .slider-wrapper{
+  width: 50px;
+}
+.carousel .thumb{
+  width: 5%;
+  height: 50px;
+  display: none;
+}
+.carousel{
+  text-align: center;
+}
+
+.one{
+  height: 100vh;
 }
